<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/url_space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/photoherds">

        <EditText
            android:id="@+id/searchSeparate"
            android:drawableStart="@drawable/places_ic_search"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/url"

            android:layout_weight="9"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/text_search_hint"
            android:autofillHints="" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/photoherds"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="fill_horizontal"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/url_space"
        app:layout_constraintBottom_toTopOf="@id/edit"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/not_found"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/gridImages"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search_off_black_24dp"
                android:layout_gravity="center"
                android:contentDescription="@string/nothing"
                android:scaleType="fitXY"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:layout_marginTop="16dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_exist"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/gridImages"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:minWidth="100dp"
                android:minHeight="100dp"
                android:layout_marginTop="16dp"
                />

            <TextView
                android:id="@+id/loading_notice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:layout_gravity="center"
                />
        </LinearLayout>


        <GridView
            android:id="@+id/gridImages"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:columnWidth="180dp"
            android:gravity="center"
            android:numColumns="auto_fit"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loading" />



<!--        <Button-->
<!--            android:id="@+id/btnSelect"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Select"-->
<!--            android:layout_marginTop="5dp"/>-->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/edit_notice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photoherds"
        />

</androidx.constraintlayout.widget.ConstraintLayout>